--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "aos": "^2.3.4",
+    "@react-icons/all-files": "^4.1.0",
     "p-limit": "^5.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-auto-translate-app": "^1.0.4",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "styled-components": "^6.1.8",
+    "translate": "^2.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
